frontend/react-dashboard/kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: azure-aks-iot-platform
  namespace: azure-aks-iot
  labels:
    app.kubernetes.io/part-of: azure-aks-iot-platform
spec:
  parentRefs:
    - name: azure-aks-iot-platform
      sectionName: http

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: azure-aks-iot-platform-backend
          port: 8080

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: azure-aks-iot-platform-frontend
          port: 8080
